5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1594_2426.log
== TEST (2019-04-02 14:39:30) 
-- CODE:
T = float(input("insira o tempo gasto em uma viagem:"))
V = float(input("insira a velocidade média do carro:"))

A = 12

D= T*V 


print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:39:45) 
-- CODE:
T = float(input("insira o tempo gasto em uma viagem:"))
V = float(input("insira a velocidade media do carro:"))

A = 12

D= T*V 


print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:39:54) 
-- CODE:
T = float(input("insira o tempo gasto em uma viagem:"))
V = float(input("insira a velocidade media do carro:"))

A = 12

D= T*V 


print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:40:05) 
-- CODE:
T = float(input("insira o tempo gasto em uma viagem:"))
V = float(input("insira a velocidade media do carro:"))

A = 12

D= T*V 


print(D)


-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:41:32) 
-- CODE:
T = float(input("insira o tempo gasto em uma viagem:"))
V = float(input("insira a velocidade media do carro:"))

A = 12

D= T*V 
L= A*V

print(D)
print(L)

-- OUTPUT:
900.0
1200.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:18:17) 
-- CODE:
T = float(input("insira o tempo gasto em uma viagem:"))
V = float(input("insira a velocidade media do carro:"))

A = 12

D= T*V 
L= A*T/V

print(D)
print(L)

-- OUTPUT:
900.0
1.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:18:38) 
-- CODE:
T = float(input("insira o tempo gasto em uma viagem:"))
V = float(input("insira a velocidade media do carro:"))

A = 12

D= T*V 
L= A*V/T

print(D)
print(L)

-- OUTPUT:
900.0
133.33333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
